syntax = "proto3";

package j5.messaging.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/pentops/j5/gen/j5/messaging/v1/messaging_j5pb";

extend google.protobuf.ServiceOptions {
  Config config = 93563434;
  ServiceConfig service = 93563435;
}

message ServiceConfig {
  optional string topic_name = 1;

  oneof role {
    Publish publish = 10;
    Request request = 11;
    Reply reply = 12;
    Event event = 13;
    Upsert upsert = 14;
  }

  message Publish {}

  message Request {}

  message Reply {}

  // The main event publishing topic for a state machine.
  message Event {
    // full name of the state machine publishing to the topic, as package.v1.name.
    string state_machine = 1;
  }

  // Derived data for sharing state machine state.
  message Upsert {
    // full name of the state machine publishing the event, as package.v1.name.
    string state_machine = 1;
  }
}

message PublishMethod {}
message RequestMethod {}
message ReplyMethod {}

// Deprecated, use ServiceConfig instead
message Config {
  oneof type {
    BroadcastConfig broadcast = 1;
    UnicastConfig unicast = 2;
    RequestConfig request = 3;
    ReplyConfig reply = 4;
  }
}

message BroadcastConfig {
  string name = 1;
}

message UnicastConfig {
  string name = 1;
}

message RequestConfig {
  // name of the queue group (i.e. prefix), should match ReplyConfig.name
  string name = 1;
}

message ReplyConfig {
  // name of the queue group (i.e. prefix), should match RequestConfig.name
  string name = 1;
}

extend google.protobuf.FieldOptions {
  FieldConfig field = 93563434;
}

message FieldConfig {
  // Designates the field as the primary message ID, which will be mapped to the
  // infra message_id field.
  // When no message ID field is set, the ID must be explicitly set at runtime.
  bool message_id = 1;
}
